<resources>
    <string name="app_name">Dresscode</string>
    <string name="menu_button">Menu</string>
    <string name="return_button">Retour</string>
    <string name="menu_close">Fermer</string>
    <string name="menu_exit">Quitter</string>
    <string name="menu_home">Accueil</string>
    <string name="menu_outfit">Mes tenues</string>
    <string name="menu_wardrobe">Mon Dressing</string>
    <string name="menu_detail">Détail</string>
    <string name="menu_logout">Déconnexion</string>
    <string name="header_title_add_wardrobe_element">Nouvel élément</string>
    <string name="header_title_add_wardrobe_outfit">Nouvelle tenue</string>
    <string name="header_title_edit_wardrobe_element">Modifier un élément</string>
    <string name="header_title_edit_wardrobe_element_confirmation">Element ajouté</string>
    <string name="header_title_add_wardrobe_outfit_choose_element">Choisir un élément</string>
    <string name="wardrobe_no_entries">Votre dressing est vide pour le moment</string>
    <string name="wardrobe_no_more_entries_to_add">Il n\'y a plus d\'éléments que vous pouvez ajouter</string>
    <string name="wardrobe_new_element">Ajouter un élément</string>
    <string name="wardrobe_view_return">Retour au dressing</string>
    <string name="wardrobe_view_name">Nom</string>
    <string name="wardrobe_view_type">Type</string>
    <string name="wardrobe_view_material">Matériau</string>
    <string name="wardrobe_view_color">Couleur</string>
    <string name="wardrobe_view_image_could_not_be_loaded">L\'image n\'a pas pu être chargée</string>
    <string name="wardrobe_view_image_could_not_be_save">L\'image n\'a pas pu être enregistrée</string>
    <string name="could_not_save_wardrobe_element">Le nouvel élément n\a pas pu être enregistré</string>
    <string name="new_wardrobe_element_saved">Ajouté au dressing</string>
    <string name="wardrobe_search_button">Rechercher des éléments</string>
    <string name="wardrobe_search_cancel">Fermer la recherche</string>
    <string name="wardrobe_search_panel_title">Rechercher des éléments : </string>
    <string name="wardrobe_search_launch">Rechercher</string>
    <string name="pick_at_list_a_color_and_a_type">Veuillez sélectionner au moins un type et une couleur</string>
    <string name="logon_page_email_label">Adresse Email : </string>
    <string name="logon_page_email_hint">Adresse Email</string>
    <string name="logon_page_password_label">Mot De Passe : </string>
    <string name="logon_page_password_hint">Mot De Passe</string>
    <string name="logon_page_send_button">Se connecter</string>
    <string name="logon_page_subscribe_button">Créer Un Compte</string>
    <string name="logout_title">Déconnexion</string>
    <string name="logout_non_synch_warning">Des données n\'ont pas encore été synchronisées avec le serveur. Elles seront définitivement perdues si vous vous déconnectez maintenant</string>
    <string name="logout_remove_data_warning">Les données liées à ce compte seront supprimées de ce téléphone (elles sont toutefois conservées sur le serveur)</string>
    <string name="outfits_no_entries">Vous n\'avez pas encore de tenues</string>
    <string name="wardrobe_element_detail_remove_alert_title">Supprimer un élément</string>
    <string name="wardrobe_element_detail_remove_alert_message">Êtes-vous sûr(e) ?</string>
    <string name="wardrobe_add_form_info">Ajoutez un élément à votre dressing</string>
    <string name="wardrobe_add_form_type_label">Type de vêtement :</string>
    <string name="wardrobe_add_form_color_label">Couleur :</string>
    <string name="wardrobe_add_form_name_label">Nom du vêtement :</string>
    <string name="wardrobe_add_form_name_hint">Nom</string>
    <string name="wardrobe_add_form_picture_label">Photo :</string>
    <string name="wardrobe_add_form_picture_button">Ajouter une photo</string>
    <string name="wardrobe_add_form_picture_change">Choisir une autre photo</string>
    <string name="wardrobe_add_form_save">Enregistrer</string>
    <string name="wardrobe_add_form_picture_prompt_title">Choisissez :</string>
    <string name="wardrobe_add_form_picture_prompt_camera">Prendre une photo</string>
    <string name="wardrobe_add_form_picture_prompt_gallery">Prendre une photo de la gallerie</string>
    <string name="wardrobe_outfit_add_form_name">Nom de la tenue :</string>
    <string name="wardrobe_outfit_add_form_name_hint">Nom</string>
    <string name="wardrobe_outfit_add_form_elements">Éléments de cette tenue</string>
    <string name="wardrobe_outfit_add_form_elements_empty">Aucun élément dans cette tenue</string>
    <string name="WARDROBE_ELEMENT">WARDROBE_ELEMENT</string>
    <string name="could_no_create_app_directory">Le dossier de l\'application n\'a pas pu être créé</string>
    <string name="amount_of_elements_in_outfit">Nombre d\'éléments dans cette tenue</string>
    <string name="BLACK">Noir</string>
    <string name="WHITE">Blanc</string>
    <string name="BLUE">Bleu</string>
    <string name="RED">Rouge</string>
    <string name="PINK">Rose</string>
    <string name="GREEN">Vert</string>
    <string name="BROWN">Marron</string>
    <string name="ORANGE">Orange</string>
    <string name="YELLOW">Jaune</string>
    <string name="PURPLE">Violet</string>
    <string name="PATTERNED">Motifs</string>
    <string name="TOP">T-shirt/Top</string>
    <string name="SHIRT">Chemise</string>
    <string name="TROUSERS">Pantalon</string>
    <string name="SKIRT">Jupe</string>
    <string name="SHORT">Short</string>
    <string name="DRESS">Robe</string>
    <string name="SWIMWEAR">Swimwear</string>
    <string name="SPORTSWEAR">Sportswear</string>
    <string name="SOCKS">Chaussettes</string>
    <string name="TIGHTS">Collant</string>
    <string name="COAT">Manteau/Veste</string>
    <string name="SHOES">Chaussures</string>
    <string name="BELT">Ceinture</string>
    <string name="BAG">Sac</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="error_launch_activity_logon">Connexion échouée, veuillez réessayer plus tard</string>
    <string name="sign_up_title">Création de compte :</string>
    <string name="sign_up_email">Adresse email</string>
    <string name="sign_up_lastname">Nom</string>
    <string name="sign_up_firstname">Prénom</string>
    <string name="sign_up_password">Mot de passe</string>
    <string name="sign_up_password_help">Chiffres/lettres (6 à 24 caractères)</string>
    <string name="sign_up_confirmation">Confirmation du mot de passe</string>
    <string name="sign_up_send">Créer un compte</string>
    <string name="sign_up_terms_of_use">J\'accepte les conditions d\'utilisation</string>
    <string name="sign_up_terms_of_use_detail">Lire les conditions d\'utilisation</string>
    <string name="sign_up_error_email_empty">Veuillez entrer une adresse email</string>
    <string name="sign_up_error_email_format">Format de l\'adresse email incorrect</string>
    <string name="sign_up_error_firstname_empty">Veuillez entrer un prénom</string>
    <string name="sign_up_error_firstname_format">Format du prénom incorrect</string>
    <string name="sign_up_error_lastname_empty">Veuillez entrer un nom</string>
    <string name="sign_up_error_lastname_format">Format du nom incorrect</string>
    <string name="sign_up_error_password_empty">Veuillez entrer un mot de passe</string>
    <string name="sign_up_error_password_format">Format du mot de passe incorrect</string>
    <string name="sign_up_error_confirmation_empty">Veuillez entrer la confirmation du mot de passe</string>
    <string name="sign_up_error_confirmation_mismatch">Les deux mots de passe ne correspondent pas</string>
    <string name="sign_up_error_terms_of_use">Vous devez accepter les conditions d\'utilisation</string>
    <string name="sign_up_success">Compte créé avec succès</string>
    <string name="sign_in_email_empty">Veuillez entrer une adresse email</string>
    <string name="sign_in_password_empty">Veuillez entrer un mot de passe</string>
    <string name="sign_in_success">Bienvenue !</string>
    <string name="get_data_from_api_failed">Connexion réussie. Cependant la récupération des données de votre compte a échoué</string>
    <string name="outfit_add_form_database_insert_error">Erreur : La nouvelle tenue n\'a pas pu être enregistrée</string>
    <string name="outfit_add_form_database_insert_success">La nouvelle tenue a été enregistrée avec succès</string>
    <string name="read_external_storage_permission_denied">Erreur : le droit de lecture du support de stockage externe est requis pour le bon fonctionnement de l\'application</string>
    <string name="write_external_storage_permission_denied">Erreur : le droit d\'écriture du support de stockage externe est requis pour le bon fonctionnement de l\'application</string>
    <string name="internet_permission_denied">Erreur : le droit d\'accès à Internet est requis pour le bon fonctionnement de l\'application</string>
    <string name="sync_with_api">Synchroniser</string>
    <string name="is_synching">Synchronisation en cours...</string>
    <string name="nothing_to_sync">Rien à synchroniser</string>
    <string name="sync_done">Synchronisation terminée</string>
    <string name="sync_failed">Échec de synchronisation</string>
    <string name="home_activity_sync_title">Synchronisation en cours</string>
    <string name="home_activity_sync_pending">Synchronisation de :</string>
    <string name="home_activity_sync_errors">Erreurs de synchronisation :</string>
    <string name="home_activity_sync_over">Synchronisation terminée</string>
    <string name="home_activity_sync_close">Fermer</string>
    <string name="home_activity_sync_retrieving">Récupération de nouvelles données depuis le serveur...</string>
    <string name="home_activity_sync_fail">Le serveur est actuellement injoignable, veuillez réessayer plus tard</string>
    <string name="wardrobe_list_activity_sync_pending">Envoi de l\'élément : </string>
    <string name="wardrobe_list_activity_sync_success">Synchronisations réussies : </string>
    <string name="wardrobe_list_activity_sync_error">Erreurs de synchronisation : </string>
    <string name="home_activity_wardrobe_elements_title">Éléments du dressing : </string>
    <string name="home_activity_wardrobe_elements_synchronized">Synchronisés avec le serveur : </string>
    <string name="home_activity_wardrobe_elements_non_synchronized">Non-Synchronisés : </string>
    <string name="home_activity_wardrobe_outfits_title">Tenues du dressing : </string>
    <string name="home_activity_wardrobe_outfits_synchronized">Synchronisées avec le serveur : </string>
    <string name="home_activity_wardrobe_outfits_non_synchronized">Non-Synchronisées : </string>
    <string name="outfit_detail_modify_name">Renommer</string>
    <string name="outfit_detail_delete">Supprimer</string>
    <string name="outfit_detail_remove_element">Retirer de cette tenue</string>
    <string name="outfit_detail_rename_title">Renommer cette tenue</string>
    <string name="outfit_detail_rename_label">Nouveau nom</string>
    <string name="outfit_detail_rename_confirm">Confirmer</string>
    <string name="outfit_detail_rename_cancel">Annuler</string>
    <string name="outfit_detail_elements_block_title">Éléments de cette tenue</string>
    <string name="outfit_remove_title">Supprimer cette tenue</string>
    <string name="outfit_remove_message">Êtes-vous sûr(e) de vouloir supprimer cette tenue ? (La suppression est définitive)</string>
</resources>