<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogonActivity"
    style="@style/LogonPageBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/LogonPageTitle"
            android:text="@string/app_name"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            style="@style/logonPageInput"
            android:layout_width="match_parent"
            android:hint="@string/logon_page_email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            style="@style/logonPageInput"
            android:layout_width="match_parent"
            android:hint="@string/logon_page_password_hint"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/logonPageSendButton"
                android:layout_weight="1"
                android:text="@string/logon_page_send_button"
                style="@style/LogonPageSendButton"/>

            <Button
                android:id="@+id/logonPageRegisterButton"
                android:layout_weight="1"
                android:text="@string/logon_page_subscribe_button"
                style="@style/LogonPageRegisterButton"/>

        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>